testsuite/tests/grammar/invalid_lkt/two_grammars.lkt
import common
import lexer_example

@with_lexer(foo_lexer) grammar foo_grammar1 {
    @main_rule main_rule <- Example("example")
}
@with_lexer(foo_lexer) grammar foo_grammar2 {
    @main_rule main_rule <- Example("example")
}
